update to accept actionable